Fix Spacing

--- a/src/components/Sidebar/AccountList/AccountList.module.scss
+++ b/src/components/Sidebar/AccountList/AccountList.module.scss
@@ -22,6 +22,7 @@
                     }
                     p {
                         font-size: 12px;
+                        margin-top: -5px;
                     }
                     &:hover {
                         border-radius: 4px;
